// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`c-mixed-field Renders \`c-mixed-field\` with boolean type correctly 1`] = `
<div
  class="mixed-field"
>
  <div
    class="v-select mixed-field__type-selector"
    dense="dense"
    error-messages=""
    hide-details="hide-details"
    label="Mixed field with boolean type"
    value="boolean"
  >
    <select>
      <option
        value="string"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          title
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            title
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.string
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="number"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          exposure_plus_1
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            exposure_plus_1
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.number
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="boolean"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          toggle_on
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            toggle_on
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.boolean
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="null"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          space_bar
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            space_bar
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.null
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="array"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          view_array
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            view_array
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.array
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
    </select>
  </div>
  <v-switch-stub
    backgroundcolor=""
    class="ma-0 ml-3 mixed-field__switch"
    color="primary"
    errorcount="1"
    errormessages=""
    hidedetails="true"
    label="false"
    messages=""
    ripple="true"
    rules=""
    successmessages=""
    valuecomparator="[Function]"
  />
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with custom props correctly 1`] = `
<div
  class="mixed-field mixed-field__solo-inverted"
>
  <div
    class="v-select mixed-field__type-selector"
    dense="dense"
    disabled="disabled"
    error-messages="First error message,Second error message"
    flat="true"
    hide-details="hide-details"
    label="Mixed field label"
    solo-inverted="true"
    value="string"
  >
    <select>
      <option
        value="string"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          title
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            title
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            Custom string
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="number"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          exposure_plus_1
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            exposure_plus_1
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.number
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="boolean"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          toggle_on
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            toggle_on
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.boolean
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
    </select>
  </div>
  <v-text-field-stub
    class="mixed-field__text"
    dense="true"
    disabled="true"
    errormessages="First error message,Second error message"
    flat="true"
    hidedetails="true"
    name="mixedFieldName"
    singleline="true"
    soloinverted="true"
    type="text"
    value="Value"
  />
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with default props correctly 1`] = `
<div
  class="mixed-field"
>
  <div
    class="v-select mixed-field__type-selector"
    dense="dense"
    error-messages=""
    hide-details="hide-details"
    value="string"
  >
    <select>
      <option
        value="string"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          title
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            title
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.string
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="number"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          exposure_plus_1
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            exposure_plus_1
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.number
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="boolean"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          toggle_on
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            toggle_on
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.boolean
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="null"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          space_bar
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            space_bar
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.null
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="array"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          view_array
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            view_array
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.array
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
    </select>
  </div>
  <v-text-field-stub
    class="mixed-field__text"
    dense="true"
    errormessages=""
    singleline="true"
    type="text"
    value=""
  />
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with errors correctly 1`] = `
<div
  class="mixed-field"
>
  <div
    class="v-select mixed-field__type-selector"
    dense="dense"
    error-messages="First error message,Second error message"
    hide-details="hide-details"
    value="string"
  >
    <select>
      <option
        value="string"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          title
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            title
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.string
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="number"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          exposure_plus_1
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            exposure_plus_1
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.number
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="boolean"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          toggle_on
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            toggle_on
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.boolean
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="null"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          space_bar
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            space_bar
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.null
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="array"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          view_array
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            view_array
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.array
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
    </select>
  </div>
  <v-text-field-stub
    class="mixed-field__text"
    dense="true"
    errormessages="First error message,Second error message"
    singleline="true"
    type="text"
    value=""
  />
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with null type correctly 1`] = `
<div
  class="mixed-field"
>
  <div
    class="v-select mixed-field__type-selector"
    dense="dense"
    error-messages=""
    hide-details="hide-details"
    label="Mixed field with null type"
    value="null"
  >
    <select>
      <option
        value="string"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          title
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            title
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.string
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="number"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          exposure_plus_1
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            exposure_plus_1
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.number
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="boolean"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          toggle_on
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            toggle_on
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.boolean
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="null"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          space_bar
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            space_bar
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.null
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="array"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          view_array
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            view_array
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.array
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
    </select>
  </div>
  <v-text-field-stub
    class="mixed-field__text"
    disabled="true"
    errormessages=""
    value="null"
  />
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with null type correctly 2`] = `
<div
  class="mixed-field"
>
  <div
    class="v-select mixed-field__type-selector"
    dense="dense"
    error-messages=""
    hide-details="hide-details"
    label="Mixed field with null type"
    value="array"
  >
    <select>
      <option
        value="string"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          title
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            title
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.string
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="number"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          exposure_plus_1
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            exposure_plus_1
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.number
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="boolean"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          toggle_on
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            toggle_on
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.boolean
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="null"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          space_bar
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            space_bar
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.null
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="array"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          view_array
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            view_array
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.array
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
    </select>
  </div>
  <c-array-mixed-field-stub
    class="ml-3"
    types="[object Object],[object Object],[object Object],[object Object]"
    values="0,1,,false,"
  />
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with number type correctly 1`] = `
<div
  class="mixed-field"
>
  <div
    class="v-select mixed-field__type-selector"
    dense="dense"
    error-messages=""
    hide-details="hide-details"
    label="Mixed field with number type"
    value="number"
  >
    <select>
      <option
        value="string"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          title
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            title
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.string
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="number"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          exposure_plus_1
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            exposure_plus_1
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.number
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="boolean"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          toggle_on
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            toggle_on
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.boolean
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="null"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          space_bar
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            space_bar
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.null
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="array"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          view_array
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            view_array
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.array
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
    </select>
  </div>
  <v-text-field-stub
    class="mixed-field__text"
    dense="true"
    errormessages=""
    name="mixedFieldName"
    singleline="true"
    type="number"
    value="222"
  />
</div>
`;

exports[`c-mixed-field Renders \`c-mixed-field\` with string type and items correctly 1`] = `
<div
  class="mixed-field"
>
  <div
    class="v-select mixed-field__type-selector"
    dense="dense"
    error-messages=""
    hide-details="hide-details"
    label="Mixed field with boolean type"
    value="boolean"
  >
    <select>
      <option
        value="string"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          title
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            title
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.string
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="number"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          exposure_plus_1
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            exposure_plus_1
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.number
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="boolean"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          toggle_on
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            toggle_on
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.boolean
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="null"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          space_bar
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            space_bar
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.null
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
      <option
        value="array"
      >
        <v-icon-stub
          class="mixed-field__type-selector-icon"
          small="small"
        >
          view_array
        </v-icon-stub>
         
        <v-list-tile-avatar-stub
          class="mixed-field__type-selector-avatar"
          size="40"
        >
          <v-icon-stub
            class="mixed-field__type-selector-icon"
            small="small"
          >
            view_array
          </v-icon-stub>
        </v-list-tile-avatar-stub>
        <v-list-tile-content-stub>
          <v-list-tile-title-stub>
            mixedField.types.array
          </v-list-tile-title-stub>
        </v-list-tile-content-stub>
      </option>
    </select>
  </div>
  <v-switch-stub
    backgroundcolor=""
    class="ma-0 ml-3 mixed-field__switch"
    color="primary"
    errorcount="1"
    errormessages=""
    hidedetails="true"
    label="false"
    messages=""
    ripple="true"
    rules=""
    successmessages=""
    valuecomparator="[Function]"
  />
</div>
`;
